--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Configuração de properties do spring boot
+# https://docs.spring.io/spring-boot/docs/current/reference/html/application-properties.html
+
 # Configurando banco de dados MYSQL
 spring.datasource.url=jdbc:mysql://localhost/vollmed_api
 spring.datasource.username=user
@@ -11,3 +14,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.data.web.pageable.page-parameter=pagina
 spring.data.web.pageable.size-parameter=tamanho
 spring.data.web.sort.sort-parameter=ordem
+
+# Propriedade para não exibir o stackTrace quando retornar erro
+server.error.include-stacktrace=never
