feat: incluido geracao de token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.data.web.sort.sort-parameter=ordem
 
 # Propriedade para não exibir o stackTrace quando retornar erro
 server.error.include-stacktrace=never
+
+# configuração da senha usada no token passando uma secret. Para ambiente desenv usa 12345678
+api.security.token.secret=${JWT_SECRET:12345678}
